# packages/api/src/crm/company/company.controller.ts
@@ -8,6 +8,8 @@ import {
   Param,
   Headers,
   UseGuards,
+  UsePipes,
+  ValidationPipe,
 } from '@nestjs/common';
 import { ApiKeyAuthGuard } from '@@core/auth/guards/api-key.guard';
 import { LoggerService } from '@@core/logger/logger.service';
@@ -18,6 +20,7 @@ import {
   ApiQuery,
   ApiTags,
   ApiHeader,
+  ApiBearerAuth,
 } from '@nestjs/swagger';
 import { ApiCustomResponse } from '@@core/utils/types';
 import { CompanyService } from './services/company.service';
@@ -26,7 +29,9 @@ import {
   UnifiedCompanyOutput,
 } from './types/model.unified';
 import { ConnectionUtils } from '@@core/connections/@utils';
+import { FetchObjectsQueryDto } from '@@core/utils/dtos/fetch-objects-query.dto';
 
+@ApiBearerAuth('JWT')
 @ApiTags('crm/companies')
 @Controller('crm/companies')
 export class CompanyController {
@@ -49,28 +54,26 @@ export class CompanyController {
     description: 'The connection token',
     example: 'b008e199-eda9-4629-bd41-a01b6195864a',
   })
-  @ApiQuery({
-    name: 'remote_data',
-    required: false,
-    type: Boolean,
-    description: 'Set to true to include data from the original Crm software.',
-  })
   @ApiCustomResponse(UnifiedCompanyOutput)
   @UseGuards(ApiKeyAuthGuard)
   @Get()
+  @UsePipes(new ValidationPipe({ transform: true, disableErrorMessages: true }))
   async getCompanies(
     @Headers('x-connection-token') connection_token: string,
-    @Query('remote_data') remote_data?: boolean,
+    @Query() query: FetchObjectsQueryDto,
   ) {
     try {
       const { linkedUserId, remoteSource } =
         await this.connectionUtils.getConnectionMetadataFromConnectionToken(
           connection_token,
         );
+      const { remote_data, pageSize, cursor } = query;
       return this.companyService.getCompanies(
         remoteSource,
         linkedUserId,
+        pageSize,
         remote_data,
+        cursor
       );
     } catch (error) {
       throw new Error(error);
