# packages/api/src/crm/engagement/services/engagement.service.ts
@@ -3,7 +3,7 @@ import { PrismaService } from '@@core/prisma/prisma.service';
 import { LoggerService } from '@@core/logger/logger.service';
 import { v4 as uuidv4 } from 'uuid';
 import { ApiResponse } from '@@core/utils/types';
-import { handleServiceError } from '@@core/utils/errors';
+import { NotFoundError, handleServiceError } from '@@core/utils/errors';
 import { WebhookService } from '@@core/webhook/webhook.service';
 import {
   UnifiedEngagementInput,
@@ -124,8 +124,8 @@ export class EngagementService {
         type === 'CALL'
           ? CrmObject.engagement_call
           : type === 'MEETING'
-          ? CrmObject.engagement_meeting
-          : CrmObject.engagement_email;
+            ? CrmObject.engagement_meeting
+            : CrmObject.engagement_email;
 
       //unify the data according to the target obj wanted
       const unifiedObject = (await unify<OriginalEngagementOutput[]>({
@@ -370,15 +370,49 @@ export class EngagementService {
   async getEngagements(
     integrationId: string,
     linkedUserId: string,
+    pageSize: number,
     remote_data?: boolean,
-  ): Promise<UnifiedEngagementOutput[]> {
+    cursor?: string
+  ): Promise<{ data: UnifiedEngagementOutput[], prev_cursor: null | string, next_cursor: null | string }> {
     try {
-      const engagements = await this.prisma.crm_engagements.findMany({
+      let prev_cursor = null;
+      let next_cursor = null;
+
+      if (cursor) {
+        const isCursorPresent = await this.prisma.crm_engagements.findFirst({
+          where: {
+            remote_platform: integrationId.toLowerCase(),
+            id_linked_user: linkedUserId,
+            id_crm_engagement: cursor
+          }
+        });
+        if (!isCursorPresent) {
+          throw new NotFoundError(`The provided cursor does not exist!`);
+        }
+      }
+
+      let engagements = await this.prisma.crm_engagements.findMany({
+        take: pageSize + 1,
+        cursor: cursor ? {
+          id_crm_engagement: cursor
+        } : undefined,
+        orderBy: {
+          created_at: 'asc'
+        },
         where: {
           remote_platform: integrationId.toLowerCase(),
           id_linked_user: linkedUserId,
         },
       });
+
+      if (engagements.length === (pageSize + 1)) {
+        next_cursor = Buffer.from(engagements[engagements.length - 1].id_crm_engagement).toString('base64');
+        engagements.pop();
+      }
+
+      if (cursor) {
+        prev_cursor = Buffer.from(cursor).toString('base64');
+      }
 
       const unifiedEngagements: UnifiedEngagementOutput[] = await Promise.all(
         engagements.map(async (engagement) => {
@@ -458,7 +492,11 @@ export class EngagementService {
         },
       });
 
-      return res;
+      return {
+        data: res,
+        prev_cursor,
+        next_cursor
+      };
     } catch (error) {
       handleServiceError(error, this.logger);
     }
