# packages/api/src/crm/stage/services/stage.service.ts
@@ -2,7 +2,7 @@ import { Injectable } from '@nestjs/common';
 import { PrismaService } from '@@core/prisma/prisma.service';
 import { LoggerService } from '@@core/logger/logger.service';
 import { v4 as uuidv4 } from 'uuid';
-import { handleServiceError } from '@@core/utils/errors';
+import { NotFoundError, handleServiceError } from '@@core/utils/errors';
 import { WebhookService } from '@@core/webhook/webhook.service';
 import { UnifiedStageOutput } from '../types/model.unified';
 import { FieldMappingService } from '@@core/field-mapping/field-mapping.service';
@@ -82,15 +82,49 @@ export class StageService {
   async getStages(
     integrationId: string,
     linkedUserId: string,
+    pageSize: number,
     remote_data?: boolean,
-  ): Promise<UnifiedStageOutput[]> {
+    cursor?: string
+  ): Promise<{ data: UnifiedStageOutput[], prev_cursor: null | string, next_cursor: null | string }> {
     try {
-      const stages = await this.prisma.crm_deals_stages.findMany({
+      let prev_cursor = null;
+      let next_cursor = null;
+
+      if (cursor) {
+        const isCursorPresent = await this.prisma.crm_deals_stages.findFirst({
+          where: {
+            remote_platform: integrationId.toLowerCase(),
+            id_linked_user: linkedUserId,
+            id_crm_deals_stage: cursor
+          }
+        });
+        if (!isCursorPresent) {
+          throw new NotFoundError(`The provided cursor does not exist!`);
+        }
+      }
+
+      let stages = await this.prisma.crm_deals_stages.findMany({
+        take: pageSize + 1,
+        cursor: cursor ? {
+          id_crm_deals_stage: cursor
+        } : undefined,
+        orderBy: {
+          created_at: 'asc'
+        },
         where: {
           remote_platform: integrationId.toLowerCase(),
           id_linked_user: linkedUserId,
         },
       });
+
+      if (stages.length === (pageSize + 1)) {
+        next_cursor = Buffer.from(stages[stages.length - 1].id_crm_deals_stage).toString('base64');
+        stages.pop();
+      }
+
+      if (cursor) {
+        prev_cursor = Buffer.from(cursor).toString('base64');
+      }
 
       const unifiedStages: UnifiedStageOutput[] = await Promise.all(
         stages.map(async (stage) => {
@@ -158,7 +192,11 @@ export class StageService {
         },
       });
 
-      return res;
+      return {
+        data: res,
+        prev_cursor,
+        next_cursor
+      };
     } catch (error) {
       handleServiceError(error, this.logger);
     }
