# packages/api/src/crm/task/services/task.service.ts
@@ -3,7 +3,7 @@ import { PrismaService } from '@@core/prisma/prisma.service';
 import { LoggerService } from '@@core/logger/logger.service';
 import { v4 as uuidv4 } from 'uuid';
 import { ApiResponse } from '@@core/utils/types';
-import { handleServiceError } from '@@core/utils/errors';
+import { NotFoundError, handleServiceError } from '@@core/utils/errors';
 import { WebhookService } from '@@core/webhook/webhook.service';
 import { UnifiedTaskInput, UnifiedTaskOutput } from '../types/model.unified';
 import { desunify } from '@@core/utils/unification/desunify';
@@ -341,15 +341,49 @@ export class TaskService {
   async getTasks(
     integrationId: string,
     linkedUserId: string,
+    pageSize: number,
     remote_data?: boolean,
-  ): Promise<UnifiedTaskOutput[]> {
+    cursor?: string
+  ): Promise<{ data: UnifiedTaskOutput[], prev_cursor: null | string, next_cursor: null | string }> {
     try {
-      const tasks = await this.prisma.crm_tasks.findMany({
+      let prev_cursor = null;
+      let next_cursor = null;
+
+      if (cursor) {
+        const isCursorPresent = await this.prisma.crm_tasks.findFirst({
+          where: {
+            remote_platform: integrationId.toLowerCase(),
+            id_linked_user: linkedUserId,
+            id_crm_task: cursor
+          }
+        });
+        if (!isCursorPresent) {
+          throw new NotFoundError(`The provided cursor does not exist!`);
+        }
+      }
+
+      let tasks = await this.prisma.crm_tasks.findMany({
+        take: pageSize + 1,
+        cursor: cursor ? {
+          id_crm_task: cursor
+        } : undefined,
+        orderBy: {
+          created_at: 'asc'
+        },
         where: {
           remote_platform: integrationId.toLowerCase(),
           id_linked_user: linkedUserId,
         },
       });
+
+      if (tasks.length === (pageSize + 1)) {
+        next_cursor = Buffer.from(tasks[tasks.length - 1].id_crm_task).toString('base64');
+        tasks.pop();
+      }
+
+      if (cursor) {
+        prev_cursor = Buffer.from(cursor).toString('base64');
+      }
 
       const unifiedTasks: UnifiedTaskOutput[] = await Promise.all(
         tasks.map(async (task) => {
@@ -423,7 +457,11 @@ export class TaskService {
         },
       });
 
-      return res;
+      return {
+        data: res,
+        prev_cursor,
+        next_cursor
+      };
     } catch (error) {
       handleServiceError(error, this.logger);
     }
